--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "nodemon": "^2.0.2",
+    "os-utils": "^0.0.14",
+    "parcel": "^1.12.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "recharts": "^2.1.8",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
